--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="">
+    <meta name="description" content="Agence La Panthère - agence web basée à Lyon. Web design, refonte de site web, optimisation SEO, Nous souhaitons aider les entreprises à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/webp" href="favicon.webp">
     
