--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
     
-	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/gmaps.js"></script>
+	<script src="./js/jquery-2.1.0.min.js"></script>
+	<script src="./js/bootstrap.min.js"></script>
+	<script src="./js/jquery.touchSwipe.min.js" defer></script>
+	<script src="./js/gmaps.min.js"></script>
 
     <title>La Panthère</title>
 
@@ -293,6 +292,6 @@
 </main>
 <!-- Principal conteneur END -->
     
-
+<script src="./js/blocs.min.js"></script>
 </body>
 </html>
