--- a/index.html
+++ b/index.html
@@ -46,8 +46,6 @@
 						<a href="index.html">Accueil</a>
 					</li>
 					<li>
-					</li>
-					<li>
 						<a href="contact.html">Nous contacter &gt;</a>
 					</li>
 				</ul>
@@ -155,7 +153,7 @@
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
-			<div class="col-sm-6">
+			<article class="col-sm-6">
 				<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.webp" alt="Lyon web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
 				<h4 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
@@ -163,7 +161,7 @@
 				<p class="text-center">
 					Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 				</p>
-			</div>
+			</article>
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.webp" class="img-responsive portfolio-thumb" alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
 				<h4 class="mg-md text-center">
