--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.webp" alt="Lyon web design logo de la meilleur agence web" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.webp" alt="Lyon web design logo de la meilleur agence web" with="60" height="40" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -50,7 +50,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="Agence La Panthère, agence web Lyon, création logo Lyon" />
+				<img src="img/logo.webp" class="center-block image-resize-mode" width="100" height="100" alt="Agence La Panthère, agence web Lyon, création logo Lyon" />
 				<h1 class="text-center hero-bloc-text tc-white ">
 					Agence La Panthère
 				</h1>
@@ -144,7 +144,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<article class="col-sm-6">
-				<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.webp" style="width: 270px; height: 275px;" alt="Lyon web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
+				<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.webp" width="270" height="275" alt="Lyon web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
 				<h4 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h4>
@@ -153,7 +153,7 @@
 				</p>
 			</article>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.webp" style="width: 270px; height: 275px;" class="img-responsive portfolio-thumb" alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+				<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.webp" width="270" height="275" class="img-responsive portfolio-thumb" alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
 				<h4 class="mg-md text-center">
 					Création d'un site web pour photographes
 				</h4>
@@ -164,7 +164,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.webp" style="width: 270px; height: 275px;" class="img-responsive portfolio-thumb" alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
+				<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.webp" width="270" height="275" class="img-responsive portfolio-thumb" alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
 				<h4 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
 				</h4>
@@ -173,7 +173,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.webp" style="width: 270px; height: 275px;" class="img-responsive portfolio-thumb" alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+				<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.webp" width="270" height="275" class="img-responsive portfolio-thumb" alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
 				<h4 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
 				</h4>
