div replace by section with keyword class erased

--- a/index.html
+++ b/index.html
@@ -230,9 +230,8 @@
 							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
-					<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				</div>
-				<div class="row">
+				<section class="row">
 					<div class="col-sm-4">
 						Partenaires
 							<ul>
@@ -270,7 +269,7 @@
 							<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
 						</ul>
 					</div>
-				</div>
+				</section>
 			</div>
 		</div>
 	</div>
