--- a/contact.html
+++ b/contact.html
@@ -156,7 +156,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js"></script>
 <script src="./js/blocs.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqBootstrapValidation/1.3.7/jqBootstrapValidation.min.js"></script>
-<script src="./js/formHandler.js"></script>
+<script src="./js/formHandler.min.js"></script>
 
 </body>
 </html>
