--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 
     <meta name="description" content="Agence La Panthère - agence web basée à Lyon. Web design, refonte de site web, optimisation SEO, Nous souhaitons aider les entreprises à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.">
 
+	<link rel="preload" href="fonts/et-line.woff" as="font" type="font/woff" crossorigin />
+	<link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css">
+	<link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="preload" href="./css/et-line.min.css">
+	<link rel="preload" href="style.css" as="style" />
+
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="./css/et-line.min.css">
