--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
 	<link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="preload" href="./css/et-line.min.css">
 	<link rel="preload" href="style.css" as="style" />
+	<link rel="preload" as="image" href="img/1.webp">
+	<link rel="preload" as="image" href="img/2.webp">
+	<link rel="preload" as="image" href="img/3.webp">
+	<link rel="preload" as="image" href="img/4.webp">
+	<link rel="preload" as="image" href="img/agence-la-panthere.webp">
+	<link rel="preload" as="image" href="img/agence-la-panthere-monochrome.webp">
+	<link rel="preload" as="image" href="img/agence-la-panthere(2).webp">
+	<link rel="preload" as="image" href="img/dots-bg.webp">
+	<link rel="preload" as="image" href="img/image-de-presentation.webp">
+	<link rel="preload" as="image" href="img/lines-h2-bg.webp">
+	<link rel="preload" as="image" href="img/logo.webp">
+	<link rel="preload" as="image" href="img/texture-paper.webp">
 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
