--- a/index.html
+++ b/index.html
@@ -83,25 +83,21 @@
 
 <!-- bloc-2-services -->
 <section class="bloc bgc-white l-bloc" id="bloc-2-services">
-	<div class="container bloc-md">
-		<div class="row">
-			<div class="col-sm-12 text-center">
-				<h2>L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</h2>
-			</div>
-		</div>
+	<div class="container bloc-md text-center">
+		<header class="row">
+			<h2>L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</h2>
+		</header>
 		<div class="row voffset-lg med-width-whitespace">
-			<div class="col-sm-4">
-				<div class="text-center">
-					<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
-				</div>
-				<h3 class="mg-md text-center">
+			<section class="col-sm-4">
+				<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+				<h3 class="mg-md">
 					Web design
 				</h3>
-				<p class="text-center ">
+				<p>
 					Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 				</p>
-			</div>
-			<div class="col-sm-4">
+			</section>
+			<section class="col-sm-4">
 				<div class="text-center">
 					<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
@@ -111,8 +107,8 @@
 				<p class="text-center ">
 					Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
 				</p>
-			</div>
-			<div class="col-sm-4">
+			</section>
+			<section class="col-sm-4">
 				<div class="text-center">
 					<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
@@ -122,7 +118,7 @@
 				<p class="text-center ">
 					Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
 				</p>
-			</div>
+			</section>
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
@@ -161,7 +157,7 @@
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
-			<article class="col-sm-6">
+			<section class="col-sm-6">
 				<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.webp" width="270" height="275" alt="Lyon web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
 				<h4 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
@@ -169,8 +165,8 @@
 				<p class="text-center">
 					Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 				</p>
-			</article>
-			<div class="col-sm-6">
+			</section>
+			<section class="col-sm-6">
 				<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.webp" width="270" height="275" class="img-responsive portfolio-thumb" alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
 				<h4 class="mg-md text-center">
 					Création d'un site web pour photographes
@@ -178,10 +174,10 @@
 				<p class="text-center">
 					Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
 				</p>
-			</div>
+			</section>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
-			<div class="col-sm-6">
+			<section class="col-sm-6">
 				<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.webp" width="270" height="275" class="img-responsive portfolio-thumb" alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
 				<h4 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
@@ -189,8 +185,8 @@
 				<p class="text-center">
 					Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
 				</p>
-			</div>
-			<div class="col-sm-6">
+			</section>
+			<section class="col-sm-6">
 				<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.webp" width="270" height="275" class="img-responsive portfolio-thumb" alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
 				<h4 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
@@ -198,7 +194,7 @@
 				<p class="text-center">
 					Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
 				</p>
-			</div>
+			</section>
 		</div>
 	</div>
 </section>
@@ -296,12 +292,12 @@
 
 </main>
 <!-- Principal conteneur END -->
-    
-<script src="./js/blocs.min.js"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js" defer></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.19/jquery.touchSwipe.min.js" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.25/gmaps.min.js" defer></script>
+<script src="./js/blocs.min.js"></script>
 
 </body>
 </html>
