changing correct balises <H> with section and deleting <div>

--- a/index.html
+++ b/index.html
@@ -151,26 +151,30 @@
 <!-- bloc-4-portfolio -->
 <section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 	<div class="container bloc-lg">
-		<div class="row">
+		<header class="row">
 			<div class="col-sm-12 text-center">
-				<h4>Nous travaillons avec beaucoup de clients,<br> voici nos réalisations</h4>
+				<h2>Nous travaillons avec beaucoup de clients,<br> voici nos réalisations</h2>
 			</div>
-		</div>
+		</header>
 		<div class="row tight-width-whitespace portfolio-row">
 			<section class="col-sm-6">
-				<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.webp" width="270" height="275" alt="Lyon web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
-				<h4 class="mg-md text-center">
+				<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
+					<img src="img/1.webp" width="270" height="275" alt="Lyon web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" />
+				</a>
+				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
-				</h4>
+				</h3>
 				<p class="text-center">
 					Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 				</p>
 			</section>
 			<section class="col-sm-6">
-				<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.webp" width="270" height="275" class="img-responsive portfolio-thumb" alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
-				<h4 class="mg-md text-center">
+				<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
+					<img src="img/2.webp" width="270" height="275" class="img-responsive portfolio-thumb" alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour photographes" />
+				</a>
+				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
-				</h4>
+				</h3>
 				<p class="text-center">
 					Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
 				</p>
@@ -179,18 +183,18 @@
 		<div class="row tight-width-whitespace portfolio-row">
 			<section class="col-sm-6">
 				<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.webp" width="270" height="275" class="img-responsive portfolio-thumb" alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
-				<h4 class="mg-md text-center">
+				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
-				</h4>
+				</h3>
 				<p class="text-center">
 					Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
 				</p>
 			</section>
 			<section class="col-sm-6">
 				<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.webp" width="270" height="275" class="img-responsive portfolio-thumb" alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
-				<h4 class="mg-md text-center">
+				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
-				</h4>
+				</h3>
 				<p class="text-center">
 					Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
 				</p>
@@ -201,18 +205,16 @@
 <!-- bloc-4-portfolio END -->
 
 <!-- bloc-5-cta -->
-<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
-	<div class="container bloc-lg">
+<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+	<div class="container bloc-lg text-center">
 		<div class="row">
-			<h4 class="mg-md text-center tc-white">
+			<h2 class="mg-md text-center tc-white">
 				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
-			</h4>
-			<div class="col-sm-12 text-center">
+			</h2>
 				<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
-			</div>
 		</div>
 	</div>
-</div>
+</section>
 <!-- bloc-5-cta END -->
 
 <!-- Footer - bloc-8 -->
@@ -220,42 +222,34 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center black">
-					Agence La Panthère - Agence web basée à Lyon.<br>
-				</p>
-				<div class="row row-no-gutters social">
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
-						</div>
-					</div>
-				</div>
-				<section>
-					<div class="col-sm-4">
-						Partenaires
+				<h3 class="text-center black">
+					Agence La Panthère - Agence web basée à Lyon.
+				</h3>
+				<ul class="row row-no-gutters social text-center">
+					<li class="col-sm-3">
+						<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+					</li>
+					<li class="col-sm-3">
+						<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+					</li>
+					<li class="col-sm-3">
+						<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+					</li>
+					<li class="col-sm-3">
+						<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+					</li>
+				</ul>
+				<div>
+					<section class="col-sm-4">
+						<h4>Partenaires</h4>
 							<ul>
 								<li><a href="voiture.com">voiture.com</a></li>
 								<li><a href="pizza.com">pizza.com</a></li>
 								<li><a href="matoiture.com">matoiture.com</a></li>
 								<li><a href="immobilierseo.com">immobilierseo.com</a></li>
 							</ul>		
-					</div>
-					<div class="col-sm-4">
+					</section>
+					<section class="col-sm-4">
 						Annuaires liste 1
 						<ul>
 							<li><a href="annuaireagence.com">annuaireagence.com</a></li>
@@ -268,8 +262,8 @@
 							<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
 							<li><a href="listeseo.com">listeseo.com</a></li>
 						</ul>
-					</div>
-					<div class="col-sm-4">
+					</section>
+					<section class="col-sm-4">
 						Annuaires liste 2
 						<ul>
 							<li><a href="betterseo.com">betterseo.com</a></li>
@@ -282,8 +276,8 @@
 							<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
 							<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
 						</ul>
-					</div>
-				</section>
+					</section>
+				</div>
 			</div>
 		</div>
 	</div>
