--- a/index.html
+++ b/index.html
@@ -207,14 +207,13 @@
 <!-- bloc-5-cta -->
 <section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 	<div class="container bloc-lg text-center">
-		<div class="row">
-			<h2 class="mg-md text-center tc-white">
-				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
-			</h2>
-				<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+		<div class="col-sm-12">
+			<h2 class="mg-md text-center tc-white">Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !</h2>
+			<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 		</div>
 	</div>
 </section>
+
 <!-- bloc-5-cta END -->
 
 <!-- Footer - bloc-8 -->
@@ -241,7 +240,7 @@
 				</ul>
 				<div>
 					<section class="col-sm-4">
-						<h4>Partenaires</h4>
+						<h4>Lyon</h4>
 							<ul>
 								<li><a href="voiture.com">voiture.com</a></li>
 								<li><a href="pizza.com">pizza.com</a></li>
@@ -250,31 +249,21 @@
 							</ul>		
 					</section>
 					<section class="col-sm-4">
-						Annuaires liste 1
+						<h4>Web design</h4>
 						<ul>
 							<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-							<li><a href="annuaireseo.com">annuaireseo.com</a></li>
 							<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-							<li><a href="123seoture.com">123seo.com</a></li>
-							<li><a href="123site.com">123site.com</a></li>
 							<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
 							<li><a href="listeagence.com">listeagence.com</a></li>
-							<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-							<li><a href="listeseo.com">listeseo.com</a></li>
 						</ul>
 					</section>
 					<section class="col-sm-4">
-						Annuaires liste 2
+						<h4>Partenaires</h4>
 						<ul>
 							<li><a href="betterseo.com">betterseo.com</a></li>
 							<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
 							<li><a href="seojuicelien.com">seojuicelien.com</a></li>
 							<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-							<li><a href="liensagogo.com">liensagogo.com</a></li>
-							<li><a href="backlink.com">backlink.com</a></li>
-							<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-							<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-							<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
 						</ul>
 					</section>
 				</div>
