--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 	<link rel="preload" as="image" href="img/lines-h2-bg.webp">
 	<link rel="preload" as="image" href="img/logo.webp">
 	<link rel="preload" as="image" href="img/texture-paper.webp">
+	<link rel="preload" as="script" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js">
+	<link rel="preload" as="script" src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js">
+	<link rel="preload" as="script" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.19/jquery.touchSwipe.min.js" defer>
+	<link rel="preload" as="script" src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.25/gmaps.min.js">
+	<link rel="preload" as="script" src="./js/blocs.min.js">
 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
