--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 <section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 	<div class="container bloc-lg text-center">
 		<div class="col-sm-12">
-			<h2 class="mg-md text-center tc-white">Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !</h2>
+			<h2 class="mg-md tc-white">Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !</h2>
 			<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 		</div>
 	</div>
@@ -245,30 +245,30 @@
 				</ul>
 				<div>
 					<section class="col-sm-4">
-						<h4>Lyon</h4>
+						<h4 class="tc-white">Lyon</h4>
 							<ul>
-								<li><a href="voiture.com">voiture.com</a></li>
-								<li><a href="pizza.com">pizza.com</a></li>
-								<li><a href="matoiture.com">matoiture.com</a></li>
-								<li><a href="immobilierseo.com">immobilierseo.com</a></li>
+								<li><a class="tc-white" href="voiture.com">voiture.com</a></li>
+								<li><a class="tc-white" href="pizza.com">pizza.com</a></li>
+								<li><a class="tc-white" href="matoiture.com">matoiture.com</a></li>
+								<li><a class="tc-white" href="immobilierseo.com">immobilierseo.com</a></li>
 							</ul>		
 					</section>
 					<section class="col-sm-4">
-						<h4>Web design</h4>
+						<h4 class="tc-white">Web design</h4>
 						<ul>
-							<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-							<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-							<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-							<li><a href="listeagence.com">listeagence.com</a></li>
+							<li><a class="tc-white" class="tc-white" href="annuaireagence.com">annuaireagence.com</a></li>
+							<li><a class="tc-white" href="annuairemarketing.com">annuairemarketing.com</a></li>
+							<li><a class="tc-white" href="annuairewordpress.com">annuairewordpress.com</a></li>
+							<li><a class="tc-white" href="listeagence.com">listeagence.com</a></li>
 						</ul>
 					</section>
 					<section class="col-sm-4">
-						<h4>Partenaires</h4>
+						<h4 class="tc-white">Partenaires</h4>
 						<ul>
-							<li><a href="betterseo.com">betterseo.com</a></li>
-							<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-							<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-							<li><a href="meilleursliens.com">meilleursliens.com</a></li>
+							<li><a class="tc-white" href="betterseo.com">betterseo.com</a></li>
+							<li><a class="tc-white" href="ameliorerseo.com">ameliorerseo.com</a></li>
+							<li><a class="tc-white" href="seojuicelien.com">seojuicelien.com</a></li>
+							<li><a class="tc-white" href="meilleursliens.com">meilleursliens.com</a></li>
 						</ul>
 					</section>
 				</div>
