--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					Agence La Panthère
 				</h1>
 				<div class="text-center">
-					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine cta-hero">Contact</a>
 				</div>
 			</div>
 		</div>
@@ -214,7 +214,7 @@
 	<div class="container bloc-lg text-center">
 		<div class="col-sm-12">
 			<h2 class="mg-md tc-white">Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !</h2>
-			<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+			<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine cta-hero">Contact</a>
 		</div>
 	</div>
 </section>
@@ -285,7 +285,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.19/jquery.touchSwipe.min.js" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.25/gmaps.min.js"></script>
-<script src="./js/blocs.min.js"></script>
+<script src="./js/blocs.min.js" defer></script>
 
 </body>
 </html>
