--- a/index.html
+++ b/index.html
@@ -231,16 +231,16 @@
 				</h3>
 				<ul class="row row-no-gutters social text-center">
 					<li class="col-sm-3">
-						<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+						<a href="index.html"><span class="fa fa-twitter icon-md"></span></a>
 					</li>
 					<li class="col-sm-3">
-						<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+						<a href="index.html"><span class="fa fa-facebook icon-md"></span></a>
 					</li>
 					<li class="col-sm-3">
-						<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+						<a href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
 					</li>
 					<li class="col-sm-3">
-						<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+						<a href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 					</li>
 				</ul>
 				<div>
