--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<link rel="preload" as="script" src="./js/blocs.min.js">
 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" async>
 	<link rel="stylesheet" href="./css/et-line.min.css">
 	<link rel="stylesheet" href="style.css">
 </head>
@@ -231,16 +231,16 @@
 				</h3>
 				<ul class="row row-no-gutters social text-center">
 					<li class="col-sm-3">
-						<a href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+						<a href="twitter.com"><span class="fa fa-twitter icon-md"></span></a>
 					</li>
 					<li class="col-sm-3">
-						<a href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+						<a href="facebook.com"><span class="fa fa-facebook icon-md"></span></a>
 					</li>
 					<li class="col-sm-3">
-						<a href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+						<a href="dribbble.com"><span class="fa fa-dribbble icon-md"></span></a>
 					</li>
 					<li class="col-sm-3">
-						<a href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+						<a href="instagram.com"><span class="fa fa-instagram icon-md"></span></a>
 					</li>
 				</ul>
 				<div>
@@ -285,7 +285,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.19/jquery.touchSwipe.min.js" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.25/gmaps.min.js"></script>
-<script src="./js/blocs.min.js" defer></script>
+<script src="./js/blocs.min.js" async></script>
 
 </body>
 </html>
