aria-label on social links

--- a/index.html
+++ b/index.html
@@ -231,16 +231,16 @@
 				</h3>
 				<ul class="row row-no-gutters social text-center">
 					<li class="col-sm-3">
-						<a href="twitter.com"><span class="fa fa-twitter icon-md"></span></a>
+						<a href="twitter.com" aria-label="Liens vers twitter"><span class="fa fa-twitter icon-md"></span></a>
 					</li>
 					<li class="col-sm-3">
-						<a href="facebook.com"><span class="fa fa-facebook icon-md"></span></a>
+						<a href="facebook.com" aria-label="Liens vers facebook"><span class="fa fa-facebook icon-md"></span></a>
 					</li>
 					<li class="col-sm-3">
-						<a href="dribbble.com"><span class="fa fa-dribbble icon-md"></span></a>
+						<a href="dribbble.com" aria-label="Liens vers dribbble"><span class="fa fa-dribbble icon-md"></span></a>
 					</li>
 					<li class="col-sm-3">
-						<a href="instagram.com"><span class="fa fa-instagram icon-md"></span></a>
+						<a href="instagram.com" aria-label="Liens vers instagram"><span class="fa fa-instagram icon-md"></span></a>
 					</li>
 				</ul>
 				<div>
