--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,6 @@
     <meta name="description" content="Agence La Panthère - agence web basée à Lyon. Web design, refonte de site web, optimisation SEO, Nous souhaitons aider les entreprises à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.">
 
 	<link rel="preload" href="fonts/et-line.woff" as="font" type="font/woff" crossorigin />
-	<link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css">
-	<link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="preload" href="./css/et-line.min.css">
 	<link rel="preload" href="style.css" as="style" />
 	<link rel="preload" as="image" href="img/1.webp">
@@ -26,6 +24,11 @@
 	<link rel="preload" as="image" href="img/lines-h2-bg.webp">
 	<link rel="preload" as="image" href="img/logo.webp">
 	<link rel="preload" as="image" href="img/texture-paper.webp">
+	<link rel="preload" as="script" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js">
+	<link rel="preload" as="script" src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js">
+	<link rel="preload" as="script" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.19/jquery.touchSwipe.min.js">
+	<link rel="preload" as="script" src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.25/gmaps.min.js">
+	<link rel="preload" as="script" src="./js/blocs.min.js">
 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -172,9 +175,9 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.19/jquery.touchSwipe.min.js" defer></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.25/gmaps.min.js"></script>
 <script src="./js/blocs.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jqBootstrapValidation/1.3.7/jqBootstrapValidation.min.js"></script>
-<script src="./js/formHandler.min.js"></script>
 
 </body>
 </html>
